# LibTgBotPP

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  tgbotpp.pc
doc/html/: Audio_8cc.html  Audio_8cc_source.html  Audio_8h.html  Audio_8h_source.html  CMakeCCompilerId_8c.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  Chat_8cc.html  Chat_8cc_source.html  Chat_8h.html  Chat_8h_source.html  Contact_8cc.html  Contact_8cc_source.html  Contact_8h.html  Contact_8h_source.html  Document_8cc.html  Document_8cc_source.html  Document_8h.html  Document_8h_source.html  Location_8cc.html  Location_8cc_source.html  Location_8h.html  Location_8h_source.html  MessageEntity_8cc.html  MessageEntity_8cc_source.html  MessageEntity_8h.html  MessageEntity_8h.js  MessageEntity_8h_source.html  Message_8cc.html  Message_8cc_source.html  Message_8h.html  Message_8h_source.html  PhotoSize_8cc.html  PhotoSize_8cc_source.html  PhotoSize_8h.html  PhotoSize_8h_source.html  README_8md.html  README_8md_source.html  Sticker_8cc.html  (+153 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_3.js  defines_5.js  defines_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+41 more)
examples/: example01.cc  example02.cc
include/: Chat.h  Document.h  Message.h  MessageEntity.h  Sticker.h  TelegramBot.h  User.h  Venue.h  Video.h  exec.h  explode.h  std.h
include/Telegram/: Audio.h  Contact.h  Document.h  Location.h  Message.h  PhotoSize.h  Sticker.h  TelegramBot.h  User.h  Venue.h  Video.h  Voice.h
src/: Audio.cc  Chat.cc  Contact.cc  Document.cc  Location.cc  Message.cc  MessageEntity.cc  PhotoSize.cc  Sticker.cc  TelegramBot.cc  User.cc  Venue.cc  Video.cc  Voice.cc  exec.cc  explode.cc  http_build_query.cc  http_build_query.h  json_encode.cc  json_encode.h  std.cc
